* Result Perspective: Added button in top right corner of a result tab to close all open results at once
* Preferences menu buttons reworked: 'OK' button saves settings permanently and closes the dialog; 
  'Apply' button saves settings permanently and does not close the dialog
* Generate Data: warn user if the selected number of attributes is not supported by the target function
* BUGFIX: Editing context variables now immediately flags the process as changed
* BUGFIX: If set to 'ask', the 'close previous results' dialog will no longer appear when resuming from a breakpoint
* BUGFIX: Breakpoints can no longer be added to the root operator
* BUGFIX: 'Store process here' popup menu action on another process will now correctly flag the process as saved
* BUGFIX: Added error message for 'Find Threshold' operator when an invalid class name is entered as parameter
* BUGFIX: The Pivot operator used on an empty example set no longer creates an example set with one example (filled with missing values)
* BUGFIX: The De-Pivot operator now has much better error handling when trying to setup the index attribute as an already existing attribute
* BUGFIX: Bug: Read Excel cannot open the Import Configuration Wizard, if the excel_file parameter is not set
* BUGFIX: Nominal to Binominal can handle border cases with mapping containing less than 2 values
* BUGFIX: Configure Repository dialog now saves user credentials fore remote repositores again
* BUGFIX: Added error shown in Problems view when entering invalid regular expression for 'replace what' parameter of Rename by Replacing operator


Changes from RapidMiner 5.2.6 to 5.2.8
--------------------------------------
* Send Mail operator has a new behavior: Stop process and show error if mail cannot be send
* Send Mail operator has a new parameter: 'Ignore errors'
* Write CSV operator has a new parameter: 'Append to file'
* Write Excel operator has a new parameter: File Format (xls, xlsx)
* New Operator: Reorder Attributes