@@ -79,6 +79,7 @@ metadata.error.incompatible_ioobjects = Input objects in collection are incompat
 metadata.error.not_defined_on_nominal = The {0} is not defined on nominal attributes.
 metadata.error.included_process_input_mismatch = Included process requires {0} inputs but receives {1}.
 metadata.error.included_process_output_mismatch = Included process delivers {0} outputs, but {1} are used.
+metadata.error.included_process_input_unused = Included process receives input data but is configured to ignore input.
 metadata.error.attribute_selection_empty = Attribute filter does not match any attributes.
 metadata.error.cannot_parse_date = Cannot parse date: {0}
 metadata.error.cannot_parse_expression = Cannot parse expression
