@@ -1460,6 +1460,14 @@ gui.dialog.confirm.exit.title   = Exit RapidMiner
 gui.dialog.confirm.exit.icon    = exit.png
 gui.dialog.confirm.exit.message = Really exit RapidMiner?
 
+gui.dialog.confirm.close_running_process.title		= Stop running process
+gui.dialog.confirm.close_running_process.icon		= sign_warning.png
+gui.dialog.confirm.close_running_process.message	= If you perform this action, the currently running process will be terminated. Continue?
+
+gui.dialog.confirm.exit_despite_running_process.title		= Exit RapidMiner while process is running
+gui.dialog.confirm.exit_despite_running_process.icon		= sign_warning.png
+gui.dialog.confirm.exit_despite_running_process.message		= Really exit RapidMiner and therefore terminate the currently running process?
+
 gui.dialog.confirm.save.title   = Save Changes
 gui.dialog.confirm.save.icon    = floppy_disk.png
 gui.dialog.confirm.save.message = Save changes to {0}?
@@ -1503,6 +1511,9 @@ gui.action.repository_chooser.resolve.tip   = If checked, selected items will be
 
 gui.dialog.error.repository_entry_already_exists.title = Entry exists
 gui.dialog.error.repository_entry_already_exists.message = Repository entry ''{0}'' already exists.
+
+gui.dialog.error.repository_folder_already_exists.title = Folder exists
+gui.dialog.error.repository_folder_already_exists.message = Repository already contains a folder with the name ''{0}''.
 
 #RunRemoteDialog
 gui.dialog.runremotedialog.title   = Run Process Remotely
