@@ -1461,6 +1461,14 @@ gui.dialog.confirm.exit.title   = RapidMiner beenden
 #gui.dialog.confirm.exit.icon    = exit.png
 gui.dialog.confirm.exit.message = Wollen Sie RapidMiner wirklich beenden?
 
+gui.dialog.confirm.close_running_process.title		= Laufenden Prozess abbrechen
+#gui.dialog.confirm.close_running_process.icon		= sign_warning.png
+gui.dialog.confirm.close_running_process.message	= Wenn Sie fortfahren, wird der laufende Prozess abgebrochen. Wirklich fortfahren?
+
+gui.dialog.confirm.exit_despite_running_process.title		= RapidMiner beenden
+#gui.dialog.confirm.exit_despite_running_process.icon		= sign_warning.png
+gui.dialog.confirm.exit_despite_running_process.message		= Wollen Sie RapidMiner wirklich beenden und damit den laufenden Prozess abbrechen?
+
 gui.dialog.confirm.save.title   = Änderungen speichern
 #gui.dialog.confirm.save.icon    = floppy_disk.png
 gui.dialog.confirm.save.message = Änderungen speichern unter {0}?
@@ -1504,6 +1512,9 @@ gui.action.repository_chooser.resolve.tip   = Ausgewählte Elemente werden bei A
 
 gui.dialog.error.repository_entry_already_exists.title = Eintrag vorhanden
 gui.dialog.error.repository_entry_already_exists.message = Der Eintrag ''{0}'' existiert bereits.
+
+gui.dialog.error.repository_folder_already_exists.title = Ordner vorhanden
+gui.dialog.error.repository_folder_already_exists.message = Es existiert bereits ein Ordner mit dem Namen ''{0}''.
 
 #RunRemoteDialog
 gui.dialog.runremotedialog.title   = Prozess ferngesteuert laufen lassen
